{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 8,
  "lineage": "48011470-1b9c-ecb3-e2e7-ddf5b25b57fb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06f68596d3ea23ee3",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0b4e141534dd1b5e9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0b4e141534dd1b5e9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dilan-morar-eng48",
            "monitoring": false,
            "primary_network_interface_id": "eni-0d52d4ac88198fd05",
            "private_dns": "ip-10-0-0-84.eu-west-1.compute.internal",
            "private_ip": "10.0.0.84",
            "public_ip": "34.244.13.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05ca4ad475b2104bd",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07016a27416f7f74b",
            "tags": {
              "Name": "Eng48-dilan-app-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0444520896dde55da"
            ]
          },
          "dependencies": [
            "aws_security_group.app_security_dm",
            "aws_subnet.app_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-054ddd00051f5dd25",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-dilan-app"
            },
            "vpc_id": "vpc-0a925dcc6b24a58c9"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c1ca18132c77ac40",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-054ddd00051f5dd25",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Eng48-dilan-app"
            },
            "vpc_id": "vpc-0a925dcc6b24a58c9"
          },
          "dependencies": [
            "aws_internet_gateway.app_internet_gateway",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037e123fffcef809e",
            "route_table_id": "rtb-0c1ca18132c77ac40",
            "subnet_id": "subnet-07016a27416f7f74b"
          },
          "dependencies": [
            "aws_internet_gateway.app_internet_gateway",
            "aws_route_table.app_route_table",
            "aws_subnet.app_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_security_dm",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0444520896dde55da",
            "description": "Allow 80 TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0444520896dde55da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app_security_dm",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Eng48-dilan-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a925dcc6b24a58c9"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-07016a27416f7f74b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-07016a27416f7f74b",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-dilan-app"
            },
            "vpc_id": "vpc-0a925dcc6b24a58c9"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-0a925dcc6b24a58c9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aafab8513d3fd4a7",
            "default_route_table_id": "rtb-040ac4fbda29126f9",
            "default_security_group_id": "sg-0dd1779b723c737da",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a925dcc6b24a58c9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-040ac4fbda29126f9",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-dilan-app"
            }
          }
        }
      ]
    }
  ]
}